rbac/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
  labels:
    env: demo
